Conforguration for tool, getter scryfall chance handling

--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
 	"defaultCurrency": "eur",
-	"collectionDirectory": "./library"
+	"collectionDirectory": "./library",
+	"scryfall": {
+		"cacheTimeout": 365
+	}
 }
