--- a/config.json
+++ b/config.json
@@ -25,6 +25,12 @@
 			"smartFlush": true,
 			"priority": 2,
 			"enabled": true
+		},
+		"tolarie": {
+			"cacheTimeout": 90,
+			"smartFlush": true,
+			"priority": 2,
+			"enabled": true
 		}
 	}
 }
