default value for chace controll

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
 	"defaultCurrency": "eur",
+	"defaultCache": "auto",
 	"collectionDirectory": "./collection",
 	"filePattern": ".*\\.txt",
 	"scryfall": {
