--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__
 .blackLotusCache
 .tolarieCache
 .mysticShopCache
-.scyfallPriceCacheeur
-.scyfallPriceCacheusd
-.scyfallPriceCachetix
+.scryfallPriceCacheeur
+.scryfallPriceCacheusd
+.scryfallPriceCachetix
 .idea
