Unified chace directory, refactor of prices

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
 	"defaultCurrency": "eur",
 	"defaultCache": "auto",
 	"collectionDirectory": "./collection",
+	"cacheRootDirectory": "./.mtgToolCache",
 	"filePattern": ".*\\.txt",
 	"scryfall": {
 		"cacheTimeout": 365,
